add_executable(aufgabe_2_und_3 
  aufgabe_2_und_3.cpp
)

add_executable(aufgabe_5 
  glew.c
  aufgabe_5.cpp
  vec2.cpp
  circle.cpp
  window.cpp
  )
target_link_libraries(aufgabe_5
  glfw
  ${GLFW_LIBRARIES}
  nanovg
  ${OPENGL_LIBRARIES} 
)

add_executable(aufgabe_6_und_7 
  glew.c
  aufgabe_6_und_7.cpp
  vec2.cpp
  circle.cpp
  window.cpp
  )
target_link_libraries(aufgabe_6_und_7
  glfw
  ${GLFW_LIBRARIES}
  nanovg
  ${OPENGL_LIBRARIES} 
)